add jvm24+ native access cmd line parameter