@@ -256,6 +256,11 @@ if awk "BEGIN{if( $JAVA_VERSION >= 9 && $JAVA_VERSION < 11 )exit 0;else exit 1}"
   JAVA_OPTS="--add-modules java.se.ee $JAVA_OPTS"
 fi
 
+# java24+ wants explicit jni allowal
+if awk "BEGIN{if($JAVA_VERSION >= 24)exit 0;else exit 1}"; then
+  JAVA_OPTS="--enable-native-access=ALL-UNNAMED $JAVA_OPTS"
+fi
+
 # avoid a NoClassDefFoundError when JAI is used
 JAVA_OPTS="-Dcom.sun.media.jai.disableMediaLib=true $JAVA_OPTS"
 
